minor alignment fix for UI/NotificationBadge

--- a/UI/Source/NotificationBadge/NotificationBadge.scss
+++ b/UI/Source/NotificationBadge/NotificationBadge.scss
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
 	font-size: px_to_rem(15);
+	line-height: normal;
 	
 	> svg {
 		width: px_to_rem(12);
